# tiny-text-to-3d

./: .gitignore  README.md  asdf.ipynb  class_condition.ipynb  dataset.ipynb  pyproject.toml  super_res.ipynb  test copy 2.ipynb  test copy.ipynb  test.ipynb  text_condition.ipynb
configs/ddpm/: ddpm_sine_cosine_uncond.json
configs/diffusion/: dit_s.json  dit_tiny_xs.json  text2pointcloud_tiny.json
configs/train/: ddpm_sine_cosine_uncond.json  modelnet10.json  modelnet40.json  text2pointcloud_tiny.json
datasets/: __init__.py  base.py  modelnet.py  sine_cosine.py
demo/client/: package-lock.json  package.json
demo/client/src/: App.jsx  index.css  (+1 more)
demo/server/: index.py
mini_3d/: dataset.py  ddpm.py  diffusion.py  dit.py  trainer.py  utils.py
mini_3d/datasets/: __init__.py  sine_cosine.py
notebooks/: asdf.ipynb  dataset.ipynb  dit.ipynb  noise.ipynb  sine_cosine copy 2.ipynb  sine_cosine copy 3.ipynb  sine_cosine copy 4.ipynb  sine_cosine copy.ipynb  sine_cosine.ipynb  super_res.ipynb  test copy 2.ipynb  test.ipynb  train_sine_cosine.ipynb
scripts/: download_modelnet10.sh  download_modelnet40.sh  prepare_modelnet.py  prepare_modelnet.sh  sample_point_cloud.py  sample_point_cloud.sh  train_text2pointcloud.py  train_text2pointcloud.sh  train_uncond_sine_cosine.py  train_uncond_sine_cosine.sh
tiny/: __init__.py  checkpoint.py  ddpm.py  diffusion.py  dit.py  lr_scheduler.py  model.py  new_diffusion.py  noise_schedule.py  pipelines.py  sampler.py  tensor_utils.py  trainer copy.py  trainer.py  utils.py
tiny/models/: __init__.py  base.py  class_condition.py  clip_condition.py  modules.py  super_res.py  unconditional.py
tiny/sampler/: __init__.py  base.py  ddim.py  ddpm.py
weights/modelnet10/: config.json
weights/modelnet40/: config.json
