[tool.poetry]
name = "tiny-text-to-3d"
version = "0.1.0"
description = ""
authors = ["Eric Chen <eric.chen@backflip.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.3.0"
torchvision = "^0.18.0"
tqdm = "^4.66.2"
trimesh = "^4.3.1"
ipykernel = "^6.29.4"
matplotlib = "^3.8.4"
open3d = "^0.18.0"
scikit-learn = "^1.4.2"
pyyaml = "^6.0.1"
addict = "^2.4.0"
pandas = "^2.2.2"
pyvista = {extras = ["all", "trame"], version = "^0.43.6"}
trame = "^3.6.0"
ipywidgets = "^8.1.2"
vtk = "^9.3.0"
jupyterlab = ">=3"
jupyter-server-proxy = "^4.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
